Menu is too wide at fixed size on mobile, just made %

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -14,7 +14,7 @@ mark.current {
   }
 
   input#search {
-    width:150px;
+    width:60%;
     margin-bottom:1em;
     margin-right:.25em;
     padding:.2em;
